--- a/travel.html
+++ b/travel.html
@@ -6,15 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Demo</title>
-    <style>
-        /* Make the image fully responsive */
-        .carousel-inner img {
-          width: 100%;
-          height: 100vh !important;
-        }
-        </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="row m-0 all">
+        <div class="col-md-9 col-sm-12">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2000">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -39,7 +35,22 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-   
+    </div>
+    <div class="col-md-3 g-0 col-sm-12 first">
+
+        <div class="row m-0 mb-1 bubble">
+            <img src="images/three.jpg" alt="hotel_room" class="img-thumbnail">
+        </div>
+        <div class="row m-0 mb-1">
+            <img src="images/two.jpg" alt="hotel_room" class="img-thumbnail">
+        </div>
+        <div class="row m-0">
+            <img src="images/four.jpg" alt="hotel_room" class="img-thumbnail">
+        </div>
+
+    </div>
+    
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
